Updated the front-page

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -593,7 +593,7 @@
           "category": "CSS",
           "autoCompile": true,
           "autoprefixer": true,
-          "sourceMaps": false,
+          "sourceMaps": true,
           "libSass": true,
           "compass": false,
           "fullCompass": false,
@@ -2364,7 +2364,7 @@
           "output": "css/_general.css",
           "name": "_general.sass",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -2372,8 +2372,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
           "type": "sass"
         },
         "734a8a0f": {
@@ -2400,7 +2402,7 @@
           "output": "css/_variables.css",
           "name": "_variables.sass",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -2408,8 +2410,11 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "eefe69cc",
+            "6fc6ea76"
+          ],
           "type": "sass"
         },
         "cfac62ff": {
@@ -2418,7 +2423,7 @@
           "output": "css/_fonts.css",
           "name": "_fonts.sass",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -2426,8 +2431,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
           "type": "sass"
         },
         "22a265e4": {
@@ -2732,7 +2739,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "fa29e6af"
+            "fa29e6af",
+            "eb09ce6d",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -2752,7 +2761,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "fa29e6af"
+            "fa29e6af",
+            "eb09ce6d",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -2772,7 +2783,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "fa29e6af"
+            "fa29e6af",
+            "eb09ce6d",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -2792,7 +2805,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "fa29e6af"
+            "fa29e6af",
+            "eb09ce6d",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -2812,7 +2827,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "fa29e6af"
+            "fa29e6af",
+            "eb09ce6d",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -2832,7 +2849,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "fa29e6af"
+            "fa29e6af",
+            "eb09ce6d",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -2852,7 +2871,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "fa29e6af"
+            "fa29e6af",
+            "eb09ce6d",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -2872,7 +2893,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "fa29e6af"
+            "fa29e6af",
+            "eb09ce6d",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -2892,7 +2915,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "fa29e6af"
+            "fa29e6af",
+            "eb09ce6d",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -2912,7 +2937,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "fa29e6af"
+            "fa29e6af",
+            "eb09ce6d",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -2932,7 +2959,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "fa29e6af"
+            "fa29e6af",
+            "eb09ce6d",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -2952,7 +2981,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "fa29e6af"
+            "fa29e6af",
+            "eb09ce6d",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -2972,7 +3003,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "fa29e6af"
+            "fa29e6af",
+            "eb09ce6d",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -3271,7 +3304,8 @@
           "parents": [
             "6fa66231",
             "639f4466",
-            "eefe69cc"
+            "eefe69cc",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -8431,6 +8465,130 @@
           "path": "css/_variables.css",
           "output": "css/_variables-dist.css",
           "name": "_variables.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "0c71f8f5": {
+          "id": "0c71f8f5",
+          "path": "src/bootstrap/css/bootstrap-flex.css",
+          "output": "src/bootstrap/css/bootstrap-flex-dist.css",
+          "name": "bootstrap-flex.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "4572bb08": {
+          "id": "4572bb08",
+          "path": "css/navbar.css",
+          "output": "css/navbar-dist.css",
+          "name": "navbar.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "4fc362a2": {
+          "id": "4fc362a2",
+          "path": "sass/_navbar.sass",
+          "output": "css/_navbar.css",
+          "name": "_navbar.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "eb09ce6d": {
+          "id": "eb09ce6d",
+          "path": "sass/_font-awesome.sass",
+          "output": "css/_font-awesome.css",
+          "name": "_font-awesome.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "2ad5ec76": {
+          "id": "2ad5ec76",
+          "path": "css/_font-awesome.css",
+          "output": "css/_font-awesome-dist.css",
+          "name": "_font-awesome.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "09e8a546": {
+          "id": "09e8a546",
+          "path": "sass/_btn.sass",
+          "output": "css/_btn.css",
+          "name": "_btn.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "f19e89c4": {
+          "id": "f19e89c4",
+          "path": "css/_btn.css",
+          "output": "css/_btn-dist.css",
+          "name": "_btn.css",
           "category": "CSS",
           "autoCompile": false,
           "sourceMaps": false,
