--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2328,7 +2328,7 @@
           "output": "css/_footer.css",
           "name": "_footer.sass",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -2336,8 +2336,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
           "type": "sass"
         },
         "3c2367d1": {
@@ -2356,26 +2358,6 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "sass"
-        },
-        "a9c3da9c": {
-          "id": "a9c3da9c",
-          "path": "sass/_general.sass",
-          "output": "css/_general.css",
-          "name": "_general.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "6fc6ea76"
-          ],
           "type": "sass"
         },
         "734a8a0f": {
@@ -2740,8 +2722,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
-            "eb09ce6d",
-            "6fc6ea76"
+            "eb09ce6d"
           ],
           "type": "sass"
         },
@@ -2762,8 +2743,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
-            "eb09ce6d",
-            "6fc6ea76"
+            "eb09ce6d"
           ],
           "type": "sass"
         },
@@ -2784,8 +2764,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
-            "eb09ce6d",
-            "6fc6ea76"
+            "eb09ce6d"
           ],
           "type": "sass"
         },
@@ -2806,8 +2785,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
-            "eb09ce6d",
-            "6fc6ea76"
+            "eb09ce6d"
           ],
           "type": "sass"
         },
@@ -2828,8 +2806,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
-            "eb09ce6d",
-            "6fc6ea76"
+            "eb09ce6d"
           ],
           "type": "sass"
         },
@@ -2850,8 +2827,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
-            "eb09ce6d",
-            "6fc6ea76"
+            "eb09ce6d"
           ],
           "type": "sass"
         },
@@ -2872,8 +2848,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
-            "eb09ce6d",
-            "6fc6ea76"
+            "eb09ce6d"
           ],
           "type": "sass"
         },
@@ -2894,8 +2869,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
-            "eb09ce6d",
-            "6fc6ea76"
+            "eb09ce6d"
           ],
           "type": "sass"
         },
@@ -2916,8 +2890,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
-            "eb09ce6d",
-            "6fc6ea76"
+            "eb09ce6d"
           ],
           "type": "sass"
         },
@@ -2938,8 +2911,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
-            "eb09ce6d",
-            "6fc6ea76"
+            "eb09ce6d"
           ],
           "type": "sass"
         },
@@ -2960,8 +2932,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
-            "eb09ce6d",
-            "6fc6ea76"
+            "eb09ce6d"
           ],
           "type": "sass"
         },
@@ -2982,8 +2953,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
-            "eb09ce6d",
-            "6fc6ea76"
+            "eb09ce6d"
           ],
           "type": "sass"
         },
@@ -3004,8 +2974,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
-            "eb09ce6d",
-            "6fc6ea76"
+            "eb09ce6d"
           ],
           "type": "sass"
         },
@@ -8534,7 +8503,7 @@
           "output": "css/_font-awesome.css",
           "name": "_font-awesome.sass",
           "category": "CSS",
-          "autoCompile": false,
+          "autoCompile": true,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -8542,10 +8511,8 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "6fc6ea76"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "sass"
         },
         "2ad5ec76": {
@@ -8589,6 +8556,62 @@
           "path": "css/_btn.css",
           "output": "css/_btn-dist.css",
           "name": "_btn.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "5a8b0f76": {
+          "id": "5a8b0f76",
+          "path": "sass/_base.sass",
+          "output": "css/_base.css",
+          "name": "_base.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "2c1e6a2a": {
+          "id": "2c1e6a2a",
+          "path": "sass/_social.sass",
+          "output": "css/_social.css",
+          "name": "_social.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "0c591f93": {
+          "id": "0c591f93",
+          "path": "css/_social.css",
+          "output": "css/_social-dist.css",
+          "name": "_social.css",
           "category": "CSS",
           "autoCompile": false,
           "sourceMaps": false,
