Update header and contact page

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -596,7 +596,7 @@
           "sourceMaps": true,
           "libSass": true,
           "compass": false,
-          "fullCompass": false,
+          "fullCompass": true,
           "outputStyle": "expanded",
           "customOutput": true,
           "imported": false,
@@ -2268,116 +2268,6 @@
           "height": 0,
           "width": 0
         },
-        "ea5b2751": {
-          "id": "ea5b2751",
-          "path": "sass/_breadcrumbs.sass",
-          "output": "css/_breadcrumbs.css",
-          "name": "_breadcrumbs.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "cb42a22f": {
-          "id": "cb42a22f",
-          "path": "sass/_card.sass",
-          "output": "css/_card.css",
-          "name": "_card.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "5e1a7972": {
-          "id": "5e1a7972",
-          "path": "sass/_contact.sass",
-          "output": "css/_contact.css",
-          "name": "_contact.sass",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "2e763a52": {
-          "id": "2e763a52",
-          "path": "sass/_footer.sass",
-          "output": "css/_footer.css",
-          "name": "_footer.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "6fc6ea76"
-          ],
-          "type": "sass"
-        },
-        "3c2367d1": {
-          "id": "3c2367d1",
-          "path": "sass/_frontpage.sass",
-          "output": "css/_frontpage.css",
-          "name": "_frontpage.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "734a8a0f": {
-          "id": "734a8a0f",
-          "path": "sass/_header.sass",
-          "output": "css/_header.css",
-          "name": "_header.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
         "6ad320ab": {
           "id": "6ad320ab",
           "path": "sass/_variables.sass",
@@ -2395,26 +2285,6 @@
           "imported": true,
           "parents": [
             "eefe69cc",
-            "6fc6ea76"
-          ],
-          "type": "sass"
-        },
-        "cfac62ff": {
-          "id": "cfac62ff",
-          "path": "sass/_fonts.sass",
-          "output": "css/_fonts.css",
-          "name": "_fonts.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
             "6fc6ea76"
           ],
           "type": "sass"
@@ -3339,7 +3209,9 @@
           "imported": true,
           "parents": [
             "6fa66231",
-            "639f4466"
+            "639f4466",
+            "6fc6ea76",
+            "eefe69cc"
           ],
           "type": "sass"
         },
@@ -3968,7 +3840,9 @@
           "imported": true,
           "parents": [
             "6fa66231",
-            "639f4466"
+            "639f4466",
+            "eefe69cc",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -3989,7 +3863,9 @@
           "imported": true,
           "parents": [
             "6fa66231",
-            "639f4466"
+            "639f4466",
+            "eefe69cc",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -4010,7 +3886,9 @@
           "imported": true,
           "parents": [
             "6fa66231",
-            "639f4466"
+            "639f4466",
+            "eefe69cc",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -8445,26 +8323,6 @@
           "parents": [],
           "type": "css"
         },
-        "4fc362a2": {
-          "id": "4fc362a2",
-          "path": "sass/_navbar.sass",
-          "output": "css/_navbar.css",
-          "name": "_navbar.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "6fc6ea76"
-          ],
-          "type": "sass"
-        },
         "eb09ce6d": {
           "id": "eb09ce6d",
           "path": "sass/_font-awesome.sass",
@@ -8481,26 +8339,6 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "sass"
-        },
-        "09e8a546": {
-          "id": "09e8a546",
-          "path": "sass/_btn.sass",
-          "output": "css/_btn.css",
-          "name": "_btn.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "6fc6ea76"
-          ],
           "type": "sass"
         },
         "5a8b0f76": {
@@ -8523,10 +8361,176 @@
           ],
           "type": "sass"
         },
-        "2c1e6a2a": {
-          "id": "2c1e6a2a",
-          "path": "sass/_social.sass",
-          "output": "css/_social.css",
+        "896d60b2": {
+          "id": "896d60b2",
+          "path": "src/bootstrap/css/bootstrap-grid.css",
+          "output": "src/bootstrap/css/bootstrap-grid-dist.css",
+          "name": "bootstrap-grid.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "36348cf2": {
+          "id": "36348cf2",
+          "path": "src/bootstrap/css/bootstrap-reboot.css",
+          "output": "src/bootstrap/css/bootstrap-reboot-dist.css",
+          "name": "bootstrap-reboot.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "9db008d6": {
+          "id": "9db008d6",
+          "path": "src/bootstrap/docs/assets/css/docs.css",
+          "output": "src/bootstrap/docs/assets/css/docs-dist.css",
+          "name": "docs.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "4c31b951": {
+          "id": "4c31b951",
+          "path": "sass/modules/_breadcrumbs.sass",
+          "output": "css/modules/_breadcrumbs.css",
+          "name": "_breadcrumbs.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "e9ab69a3": {
+          "id": "e9ab69a3",
+          "path": "sass/modules/_card.sass",
+          "output": "css/modules/_card.css",
+          "name": "_card.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "b73376e6": {
+          "id": "b73376e6",
+          "path": "sass/modules/_fonts.sass",
+          "output": "css/modules/_fonts.css",
+          "name": "_fonts.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "1f6589a7": {
+          "id": "1f6589a7",
+          "path": "sass/modules/_footer.sass",
+          "output": "css/modules/_footer.css",
+          "name": "_footer.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "5ae33a9e": {
+          "id": "5ae33a9e",
+          "path": "sass/modules/_header.sass",
+          "output": "css/modules/_header.css",
+          "name": "_header.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "c9708016": {
+          "id": "c9708016",
+          "path": "sass/modules/_navbar.sass",
+          "output": "css/modules/_navbar.css",
+          "name": "_navbar.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "6676b307": {
+          "id": "6676b307",
+          "path": "sass/modules/_social.sass",
+          "output": "css/modules/_social.css",
           "name": "_social.sass",
           "category": "CSS",
           "autoCompile": false,
@@ -8542,6 +8546,152 @@
             "6fc6ea76"
           ],
           "type": "sass"
+        },
+        "3e90b692": {
+          "id": "3e90b692",
+          "path": "css/_contact.css",
+          "output": "css/_contact-dist.css",
+          "name": "_contact.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "ef065423": {
+          "id": "ef065423",
+          "path": "sass/pages/_page-contact.sass",
+          "output": "css/pages/_page-contact.css",
+          "name": "_page-contact.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "8cfe7e7c": {
+          "id": "8cfe7e7c",
+          "path": "sass/pages/_page-frontpage.sass",
+          "output": "css/pages/_page-frontpage.css",
+          "name": "_page-frontpage.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "249634b3": {
+          "id": "249634b3",
+          "path": "sass/modules/_inputs.sass",
+          "output": "css/modules/_inputs.css",
+          "name": "_inputs.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "640cae7c": {
+          "id": "640cae7c",
+          "path": "css/modules/_inputs.css",
+          "output": "css/modules/_inputs-dist.css",
+          "name": "_inputs.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "b3001aec": {
+          "id": "b3001aec",
+          "path": "sass/modules/_buttons.sass",
+          "output": "css/modules/_buttons.css",
+          "name": "_buttons.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "e5b0842f": {
+          "id": "e5b0842f",
+          "path": "sass/modules/_typography.sass",
+          "output": "css/modules/_typography.css",
+          "name": "_typography.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "5296c43d": {
+          "id": "5296c43d",
+          "path": "css/modules/_typography.css",
+          "output": "css/modules/_typography-dist.css",
+          "name": "_typography.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
