--- a/prepros.cfg
+++ b/prepros.cfg
@@ -8547,22 +8547,6 @@
           ],
           "type": "sass"
         },
-        "3e90b692": {
-          "id": "3e90b692",
-          "path": "css/_contact.css",
-          "output": "css/_contact-dist.css",
-          "name": "_contact.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "ef065423": {
           "id": "ef065423",
           "path": "sass/pages/_page-contact.sass",
@@ -8589,7 +8573,7 @@
           "output": "css/pages/_page-frontpage.css",
           "name": "_page-frontpage.sass",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -8597,8 +8581,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
           "type": "sass"
         },
         "249634b3": {
@@ -8620,22 +8606,6 @@
             "6fc6ea76"
           ],
           "type": "sass"
-        },
-        "640cae7c": {
-          "id": "640cae7c",
-          "path": "css/modules/_inputs.css",
-          "output": "css/modules/_inputs-dist.css",
-          "name": "_inputs.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
         },
         "b3001aec": {
           "id": "b3001aec",
@@ -8676,22 +8646,6 @@
             "6fc6ea76"
           ],
           "type": "sass"
-        },
-        "5296c43d": {
-          "id": "5296c43d",
-          "path": "css/modules/_typography.css",
-          "output": "css/modules/_typography-dist.css",
-          "name": "_typography.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
         }
       },
       "deploymentHistory": {},
