--- a/prepros.cfg
+++ b/prepros.cfg
@@ -8646,6 +8646,86 @@
             "6fc6ea76"
           ],
           "type": "sass"
+        },
+        "d7248726": {
+          "id": "d7248726",
+          "path": "sass/pages/_page-blog.sass",
+          "output": "css/pages/_page-blog.css",
+          "name": "_page-blog.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "83713b53": {
+          "id": "83713b53",
+          "path": "sass/pages/_page-single.sass",
+          "output": "css/pages/_page-single.css",
+          "name": "_page-single.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "c7f42e02": {
+          "id": "c7f42e02",
+          "path": "sass/pages/_page-about.sass",
+          "output": "css/pages/_page-about.css",
+          "name": "_page-about.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "8a5fb57f": {
+          "id": "8a5fb57f",
+          "path": "sass/pages/_page-services.sass",
+          "output": "css/pages/_page-services.css",
+          "name": "_page-services.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
